[gd_scene load_steps=10 format=3 uid="uid://c3tdc80a12d1i"]

[ext_resource type="Script" path="res://gui/settings_menu_contents.gd" id="1_btctw"]
[ext_resource type="PackedScene" uid="uid://cclbjlc3hx2lv" path="res://gui/title_label.tscn" id="1_lr85f"]
[ext_resource type="PackedScene" uid="uid://d0d4pvp0xmvo" path="res://gui/icon_button.tscn" id="1_sdqnb"]
[ext_resource type="Texture2D" uid="uid://cp0q7hvev1hy0" path="res://gui/arrow_left.svg" id="2_jsg5p"]
[ext_resource type="Shortcut" uid="uid://ctl670m8ewyx" path="res://gui/esc_shortcut.tres" id="3_coyre"]
[ext_resource type="PackedScene" uid="uid://bfbbc1lm3doy7" path="res://game_objects/audio/ambient_note_player.tscn" id="6_fdpvn"]
[ext_resource type="PackedScene" uid="uid://c2igw674holmk" path="res://game_objects/audio/block_note_player.tscn" id="7_j617l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5n8y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gistv"]

[node name="Contents" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_btctw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackBtn" parent="VBoxContainer/Header" instance=ExtResource("1_sdqnb")]
layout_mode = 2
shortcut = ExtResource("3_coyre")
icon = ExtResource("2_jsg5p")

[node name="Control" type="Control" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" parent="VBoxContainer" instance=ExtResource("1_lr85f")]
layout_mode = 2
text = "Settings"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_c5n8y")
text = "Sound
"

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_gistv")
text = "Ambient volume"

[node name="AmbientVolSlider" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.0

[node name="AmbientNotePlayer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AmbientVolSlider" instance=ExtResource("6_fdpvn")]
unique_name_in_owner = true
tone = 3
keep_alive = true
release_duration = 1.0

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_gistv")
text = "SFX volume"

[node name="SFXVolSlider" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.0

[node name="SFXNotePlayer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/SFXVolSlider" instance=ExtResource("7_j617l")]
unique_name_in_owner = true
pitch = 1.0
keep_alive = true

[node name="Control2" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/Header/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AmbientVolSlider" to="." method="_on_ambient_vol_slider_drag_ended"]
[connection signal="drag_started" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AmbientVolSlider" to="." method="_on_ambient_vol_slider_drag_started"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AmbientVolSlider" to="." method="_on_ambient_vol_slider_value_changed"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/SFXVolSlider" to="." method="_on_sfx_vol_slider_drag_ended"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/SFXVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
